[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/workshop_camera/InputListener.gd" type="Script" id=1]
[ext_resource path="res://scripts/workshop_camera/CameraTween.gd" type="Script" id=2]

[node name="WorkshopCamera" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -20.714, 6.184, 16.75 )
script = ExtResource( 2 )

[node name="Positions" type="Spatial" parent="."]

[node name="Position1" type="Spatial" parent="Positions"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -20.7136, 6.18424, 16.7504 )

[node name="Position2" type="Spatial" parent="Positions"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -20.7136, 6.18424, -6.96946 )

[node name="Position3" type="Spatial" parent="Positions"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -14.7249, 6.18424, -19.8256 )

[node name="Position4" type="Spatial" parent="Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.618335, 6.18424, -25.4669 )

[node name="Interfaces" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="View1" type="Control" parent="Interfaces"]
margin_right = 40.0
margin_bottom = 40.0

[node name="View2" type="Control" parent="Interfaces"]
margin_right = 40.0
margin_bottom = 40.0

[node name="View3" type="Control" parent="Interfaces"]
margin_right = 40.0
margin_bottom = 40.0

[node name="View4" type="Control" parent="Interfaces"]
margin_right = 40.0
margin_bottom = 40.0
